--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -11,10 +11,21 @@ header {height:80px;}
 .my-page-number:hover {text-decoration: none}
 .my-info {height:280px; width:1100px; background-color:#e0e0e0;}
 .my-info-movie {min-height:300px; width:1100px; background-color:#e0e0e0;}
+.my-tickets {height:280px; width:1100px; background-color:#404040;}
+.my-ticket-message {height:100px; width:1100px; background-color:#404040;}
 .movie-box {min-height:800px; width:1150px; background-color: #e0e0e0;}
 .my-movie-box {height:450px; width:1100px; background-color: #e0e0e0;}
 .review-box {width:1100px; min-height:400px; background-color: #e0e0e0;}
 .profileImage {border-radius: 70%; overflow: hidden;}
+.plan-box {min-height:950px; width:1100px; background-color: #e0e0e0;}
+.plan-nav {min-height:800px; width:300px; background-color: #f9f9f9;}
+.plan-seat-box {min-height:800px; width:1100px; background-color: #e0e0e0;}
+.seat-view {height:580px; width:580px; background-color: #404040;}
+.seat-num-view {height:470px; width:470px; background-color: #e0e0e0;}
+.seat-box {height:30px; width:32px;}
+.seat-box:hover {background-color: #404040;}
+.seat-num:hover {text-decoration: none;}
+.movie-view {height:500px; width:400px; background-color: #404040;}
 footer {height:80px;}
 .btn-type1 {background-color:#404040; height:40px; width:100px;}
 .btn-type2 {background-color:#e0e0e0; height:40px; width:100px;}
