--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -34,26 +34,10 @@ footer {height:80px;}
 .reveiw-table {width:1000px; margin:auto;}
 
 
-.myform fieldset{
-    display: inline-block;
-    direction: rtl;
-    border:0;
-}
-.myform input[type=radio]{
-    display: none;
-}
-.myform label{
-    font-size: 2em;
-    color: transparent;
-    text-shadow: 0 0 0 #f0f0f0;
-}
+.myform fieldset{display: inline-block; direction: rtl; border:0;}
+.myform input[type=radio]{display: none;}
+.myform label{font-size: 2em;color: transparent;text-shadow: 0 0 0 #f0f0f0;}
 
-.myform label:hover{
-    text-shadow: 0 0 0 rgba(250, 208, 0, 0.99);
-}
-.myform label:hover ~ label{
-    text-shadow: 0 0 0 rgba(250, 208, 0, 0.99);
-}
-.myform input[type=radio]:checked ~ label{
-    text-shadow: 0 0 0 rgba(250, 208, 0, 0.99);
-}
+.myform label:hover{text-shadow: 0 0 0 rgba(250, 208, 0, 0.99);}
+.myform label:hover ~ label{text-shadow: 0 0 0 rgba(250, 208, 0, 0.99);}
+.myform input[type=radio]:checked ~ label{text-shadow: 0 0 0 rgba(250, 208, 0, 0.99);}
